--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,10 +45,13 @@ jobs:
       - name: Install Dependencies with Conan (Ubuntu gcc)
         if: ${{ matrix.config.os == 'ubuntu-latest' }}
         run: |
+          sudo apt-get install libssl-dev libsrtp2-dev
           conan profile new default --detect
           conan profile update settings.compiler.libcxx=libstdc++11 default
           conan install -if build .
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+      - name: Build with CMake
+        run: cmake --build build --config ${{ matrix.config.build_type }}
       - name: Build with CMake
         run: cmake --build build --config ${{ matrix.config.build_type }}
